# isetup

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  e2e_cli_test.go  e2e_test.go  embed.go  go.mod  go.sum  install.sh  main.go  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml  release.yml
cmd/: cmd_test.go  detect.go  init_cmd.go  install.go  list.go  root.go  version.go
docs/superpowers/plans/: 2026-04-22-interactive-selection.md
docs/superpowers/specs/: 2026-04-22-interactive-selection-design.md
internal/config/: config.go  config_test.go  validate.go  validate_test.go
internal/detector/: detector.go  detector_test.go  gpu.go  gpu_test.go  os.go  os_test.go  pkgmgr.go  pkgmgr_test.go  shell.go  shell_test.go
internal/executor/: bootstrap.go  depends.go  depends_test.go  executor.go  executor_test.go  installed.go  resolver.go  resolver_test.go  runner.go  runner_test.go  sudo.go  sudo_test.go  template.go  template_test.go
internal/logger/: logger.go  logger_test.go
internal/picker/: deps.go  deps_test.go  input.go  input_test.go  model.go  model_test.go  picker.go  render.go  render_test.go  signals_unix.go  signals_windows.go
python/isetup/: __init__.py  __main__.py
scripts/: build_wheels.sh
template/: default.yaml
